Admin: Upgrade shopify-api and fix auth.
This should've been two commits, but fuck it. Way more important to get
this out than to dwell over such things atm.

--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -9,6 +9,7 @@
         "jsxImportSource": "react",
         "paths": {
             "@/api/*": ["src/api/*"],
+            "@/auth": ["src/utils/auth.ts"],
             "@/components/*": ["src/components/*"],
             "@/styles/*": ["src/scss/*"],
             "@/utils/*": ["src/utils/*"],
