--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -59,6 +59,7 @@
         "@shopify/hydrogen-react": "2024.4.0",
         "@shopify/shopify-api": "11.0.1",
         "@vercel/analytics": "1.3.1",
+        "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
         "accept-language-parser": "1.5.0",
         "colord": "2.9.3",
