--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -64,7 +64,6 @@
         "accept-language-parser": "1.5.0",
         "colord": "2.9.3",
         "convert-units": "2.3.4",
-        "geist": "1.3.0",
         "graphql-tag": "2.12.6",
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
@@ -83,10 +82,11 @@
     },
     "devDependencies": {
         "@happy-dom/global-registrator": "13.2.2",
+        "@next/bundle-analyzer": "14.2.4",
         "@nordcom/prettier": "0.1.1",
         "@slicemachine/adapter-next": "0.3.42",
-        "@testing-library/react": "16.0.0",
         "@testing-library/jest-dom": "6.4.6",
+        "@testing-library/react": "16.0.0",
         "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
         "@types/lodash.debounce": "4.0.9",
