--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -57,6 +57,8 @@
         "@prismicio/client": "7.4.1",
         "@prismicio/next": "1.6.0",
         "@prismicio/react": "2.8.0",
+        "@sentry/nextjs": "8.11.0",
+        "@sentry/profiling-node": "8.11.0",
         "@shopify/hydrogen-react": "2024.4.0",
         "@vercel/analytics": "1.3.1",
         "@vercel/otel": "1.8.1",
@@ -90,12 +92,12 @@
         "@types/convert-units": "2.3.9",
         "@types/lodash.debounce": "4.0.9",
         "@types/nprogress": "0.2.3",
-        "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
+        "@types/react-dom": "18.2.24",
         "concurrently": "8.2.2",
         "critters": "0.0.22",
-        "eslint-config-next": "14.2.1",
         "eslint": "8.57.0",
+        "eslint-config-next": "14.2.1",
         "graphql": "16.9.0",
         "happy-dom": "14.3.2",
         "prettier": "3.3.2",
