--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -64,6 +64,7 @@
         "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
         "accept-language-parser": "1.5.0",
+        "clsx": "2.1.1",
         "colord": "2.9.3",
         "convert-units": "2.3.4",
         "lodash.debounce": "4.0.8",
