--- a/apps/storefront/.eslintrc
+++ b/apps/storefront/.eslintrc
@@ -14,7 +14,7 @@
     ],
     "settings": {
         "next": {
-            "rootDir": "apps/landing/"
+            "rootDir": "apps/storefront/"
         }
     }
 }
