--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -8,7 +8,6 @@
     "cacheDirectories": [
         ".next/cache"
     ],
-    "prettier": "@nordcom/prettier",
     "scripts": {
         "start": "next start -p $PORT",
         "dev": "next dev -p 1337 --turbo",
@@ -70,15 +69,16 @@
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
         "next-sitemap": "4.2.3",
-        "next": "15.0.0-canary.40",
+        "next": "15.0.0-canary.49",
         "nextjs-toploader": "1.6.12",
         "nprogress": "0.2.0",
-        "react-dom": "19.0.0-rc-e684ca66ab-20240619",
+        "react-dom": "19.0.0-rc-58af67a8f8-20240628",
         "react-icons": "5.1.0",
-        "react": "19.0.0-rc-e684ca66ab-20240619",
+        "react": "19.0.0-rc-58af67a8f8-20240628",
         "sass": "1.77.6",
         "sharp": "0.33.4",
         "sonner": "1.5.0",
+        "tailwind-merge": "2.3.0",
         "the-new-css-reset": "1.11.2",
         "use-context-selector": "2.0.0"
     },
@@ -87,25 +87,30 @@
         "@next/bundle-analyzer": "14.2.4",
         "@nordcom/prettier": "0.1.1",
         "@slicemachine/adapter-next": "0.3.42",
+        "@tailwindcss/typography": "0.5.13",
         "@testing-library/jest-dom": "6.4.6",
         "@testing-library/react": "16.0.0",
         "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
         "@types/lodash.debounce": "4.0.9",
         "@types/nprogress": "0.2.3",
-        "@types/react": "18.2.75",
         "@types/react-dom": "18.2.24",
+        "@types/react": "18.2.75",
+        "autoprefixer": "10.4.19",
+        "babel-plugin-react-compiler": "0.0.0-experimental-696af53-20240625",
         "concurrently": "8.2.2",
         "critters": "0.0.24",
-        "eslint": "8.57.0",
         "eslint-config-next": "14.2.1",
+        "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "14.3.2",
+        "postcss": "8.4.38",
         "prettier": "3.3.2",
         "rimraf": "5.0.7",
         "schema-dts": "1.1.2",
         "server-only": "0.0.1",
         "slice-machine-ui": "2.2.1",
+        "tailwindcss": "3.4.4",
         "typescript": "5.5.2",
         "vitest": "1.5.0"
     }
