--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         ".next/cache",
         "apps/**/.next/cache"
     ],
-    "prettier": "@nordcom/prettier",
     "workspaces": [
         "apps/*",
         "packages/*"
@@ -64,20 +63,19 @@
         "@nordcom/prettier": "0.1.1",
         "@prisma/client": "5.12.0",
         "@types/node": "20.12.7",
-        "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
+        "@types/react-dom": "18.2.24",
         "@typescript-eslint/eslint-plugin": "7.6.0",
         "@typescript-eslint/parser": "7.6.0",
         "@vitejs/plugin-react": "4.3.1",
         "@vitest/coverage-v8": "1.5.0",
         "babel-plugin-module-resolver": "5.0.2",
-        "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
         "concurrently": "8.2.2",
         "dotenv-cli": "7.4.2",
+        "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-jsdoc": "48.5.0",
         "eslint-plugin-jsx-a11y": "6.9.0",
-        "eslint": "8.57.0",
         "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-react": "7.34.3",
         "eslint-plugin-react-hooks": "4.6.0",
@@ -89,6 +87,7 @@
         "mongoose": "8.4.0",
         "prettier": "3.3.2",
         "prettier-eslint": "16.3.0",
+        "prettier-plugin-tailwindcss": "0.6.5",
         "prisma": "5.12.0",
         "turbo": "2.0.5",
         "turbo-ignore": "2.0.5",
@@ -103,7 +102,7 @@
         "@rollup/rollup-linux-x64-gnu": "4.18.0"
     },
     "overrides": {
-        "@typescript-eslint/typescript-estree": "7.13.1",
+        "@typescript-eslint/typescript-estree": "7.14.1",
         "esbuild": "0.21.5",
         "psl": "npm:@filiphsandstrom/psl@2.0.0"
     },
