--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -62,7 +62,6 @@
         "@vercel/analytics": "1.3.1",
         "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
-        "accept-language-parser": "1.5.0",
         "clsx": "2.1.1",
         "colord": "2.9.3",
         "convert-units": "2.3.4",
@@ -75,6 +74,7 @@
         "react-dom": "19.0.0-rc-58af67a8f8-20240628",
         "react-icons": "5.1.0",
         "react": "19.0.0-rc-58af67a8f8-20240628",
+        "resolve-accept-language": "3.1.4",
         "sass": "1.77.6",
         "sharp": "0.33.4",
         "sonner": "1.5.0",
