Storefront: Replace `Header` and Improve text legibility.
This is a huge commit, should've been split up into smaller commits
however, there's not enough time to do everything properly. :/

--- a/apps/storefront/tsconfig.json
+++ b/apps/storefront/tsconfig.json
@@ -21,6 +21,7 @@
             "@/i18n/dictionary": ["src/utils/dictionary.ts"],
             // Prismic.
             "@/slices/*": ["src/slices/*"],
+            "@/slices/navigation": ["src/slices/navigation/index.ts"],
             "@/slices": ["src/slices/index"],
             "@/prismic/types": ["prismicio-types.d.ts"],
             // Assets.
