--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -65,6 +65,7 @@
         "clsx": "2.1.1",
         "colord": "2.9.3",
         "convert-units": "2.3.4",
+        "country-code-lookup": "0.1.3",
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
         "next-sitemap": "4.2.3",
