--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -68,12 +68,12 @@
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
         "next-sitemap": "4.2.3",
-        "next": "15.0.0-canary.49",
+        "next": "15.0.0-canary.76",
         "nextjs-toploader": "1.6.12",
         "nprogress": "0.2.0",
-        "react-dom": "19.0.0-rc-58af67a8f8-20240628",
+        "react-dom": "19.0.0-rc-d025ddd3-20240722",
         "react-icons": "5.1.0",
-        "react": "19.0.0-rc-58af67a8f8-20240628",
+        "react": "19.0.0-rc-d025ddd3-20240722",
         "resolve-accept-language": "3.1.4",
         "sass": "1.77.8",
         "sharp": "0.33.4",
