--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -20,7 +20,7 @@
         "slicemachine": "exit 0"
     },
     "author": {
-        "name": "Nordcom Group Inc.",
+        "name": "Nordcom AB",
         "email": "hi@nordcom.io",
         "url": "https://nordcom.io/"
     },
