--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -27,7 +27,7 @@
         "typecheck": "tsc -noEmit"
     },
     "author": {
-        "name": "Nordcom Group Inc.",
+        "name": "Nordcom AB",
         "email": "hi@nordcom.io",
         "url": "https://nordcom.io/"
     },
