--- a/packages/marketing-common/package.json
+++ b/packages/marketing-common/package.json
@@ -28,7 +28,7 @@
         "typecheck": "tsc -noEmit"
     },
     "author": {
-        "name": "Nordcom Group Inc.",
+        "name": "Nordcom AB",
         "email": "hi@nordcom.io",
         "url": "https://nordcom.io/"
     },
