Storefront: Add reviews from Okendo.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,7 @@
         "nosnippet",
         "nprogress",
         "nums",
+        "okendo",
         "overscroll",
         "predev",
         "Preloadable",
