Storefront: Fix FRO-126.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
         "nextjs",
         "Nordcom",
         "Nordstar",
+        "nosnippet",
         "nprogress",
         "nums",
         "overscroll",
