--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -57,6 +57,7 @@
         "@sentry/profiling-node": "8.22.0",
         "@shopify/hydrogen-react": "2024.4.0",
         "@vercel/analytics": "1.3.1",
+        "@vercel/edge-config": "1.2.1",
         "@vercel/flags": "2.6.0",
         "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
