--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -57,6 +57,7 @@
         "@sentry/profiling-node": "8.22.0",
         "@shopify/hydrogen-react": "2024.4.0",
         "@vercel/analytics": "1.3.1",
+        "@vercel/flags": "2.6.0",
         "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
         "clsx": "2.1.1",
@@ -78,7 +79,8 @@
         "sonner": "1.5.0",
         "tailwind-merge": "2.4.0",
         "the-new-css-reset": "1.11.2",
-        "use-context-selector": "2.0.0"
+        "use-context-selector": "2.0.0",
+        "vercel": "35.2.3"
     },
     "devDependencies": {
         "@happy-dom/global-registrator": "13.2.2",
