--- a/apps/storefront/tsconfig.json
+++ b/apps/storefront/tsconfig.json
@@ -41,6 +41,6 @@
         "target": "ES2017"
     },
     "exclude": ["node_modules"],
-    "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts"],
+    "include": ["next-env.d.ts", "src/**/*.ts", "src/**/.well-known/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts"],
     "references": [{ "path": "../../tsconfig.json" }]
 }
