--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,6 +100,7 @@
         "slicemachine",
         "Sobolewski",
         "sonner",
+        "stylesheet",
         "Subframes",
         "sweetsideofsweden",
         "thirdparties",
