--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -90,6 +90,7 @@
         "@nordcom/prettier": "0.1.1",
         "@slicemachine/adapter-next": "0.3.45",
         "@tailwindcss/typography": "0.5.14",
+        "@tailwindcss/aspect-ratio": "0.4.2",
         "@testing-library/jest-dom": "6.4.8",
         "@testing-library/react": "16.0.0",
         "@types/accept-language-parser": "1.5.6",
