Storefront: Simplify product-card and improve product page design.
This should've been multiple commits, but there's no time for that right
now :/

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,6 +103,7 @@
         "stylesheet",
         "Subframes",
         "sweetsideofsweden",
+        "tailwindcss",
         "thirdparties",
         "timeframes",
         "toploader",
