Everywhere: Fix a bunch of eslint no-unnecessary-condition issues.
This also slightly improves the storefront design and may or may not
improve the performance across the board since a bunch of unnecessary
checks and conditions have been removed.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
         "Albin",
         "autofocus",
         "Bergsgatan",
+        "changefreq",
         "colord",
         "compat",
         "Dahlqvist",
