--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,7 @@
         "Etags",
         "Filiph",
         "filiphsandstrom",
+        "filiphsps",
         "googlebot",
         "Götaland",
         "HSTS",
@@ -116,6 +117,7 @@
         "Västra",
         "Vercel",
         "virtuals",
+        "wakatime",
         "webp",
         "Woohoo"
     ],
