Storefront: Fix product page on safari.

--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -10,7 +10,7 @@
     ],
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev -p 1337 --turbo",
+        "dev": "next dev -p 1337 --turbo --experimental-https",
         "build": "next build",
         "clean": "rimraf -g dist coverage .turbo .next .tsbuildinfo *.log",
         "lint": "next lint",
