--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,6 +107,7 @@
         "Subframes",
         "sweetsideofsweden",
         "tailwindcss",
+        "testid",
         "thirdparties",
         "timeframes",
         "toploader",
