Storefront: Add geo-redirect component.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "googlebot",
         "Götaland",
         "HSTS",
+        "ipgeolocation",
         "lastmod",
         "Lexend",
         "markdoc",
