--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -74,12 +74,13 @@
         "nprogress": "0.2.0",
         "react-dom": "19.0.0-rc-b57d2823-20240822",
         "react-icons": "5.1.0",
+        "react-ipgeolocation": "1.4.0",
+        "react-share": "5.1.0",
         "react": "19.0.0-rc-b57d2823-20240822",
         "resolve-accept-language": "3.1.5",
         "sass": "1.77.8",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
-        "react-share": "5.1.0",
         "tailwind-merge": "2.5.2",
         "the-new-css-reset": "1.11.3",
         "use-context-selector": "2.0.0",
