--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -55,7 +55,7 @@
         "@prismicio/react": "2.8.0",
         "@sentry/nextjs": "8.26.0",
         "@sentry/profiling-node": "8.26.0",
-        "@shopify/hydrogen-react": "2024.4.0",
+        "@shopify/hydrogen-react": "2024.7.2",
         "@vercel/analytics": "1.3.1",
         "@vercel/edge-config": "1.2.1",
         "@vercel/flags": "2.6.0",
@@ -73,6 +73,7 @@
         "nextjs-toploader": "1.6.12",
         "nprogress": "0.2.0",
         "react-dom": "19.0.0-rc-b57d2823-20240822",
+        "react-error-boundary": "4.0.13",
         "react-icons": "5.1.0",
         "react-ipgeolocation": "1.4.0",
         "react-share": "5.1.0",
