Storefront: Fix `useCartUtils` tests.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,6 +116,7 @@
         "Trollhättan",
         "tsbuildinfo",
         "typecheck",
+        "unoptimized",
         "uuidv",
         "Västra",
         "Vercel",
