--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -10,7 +10,7 @@
     ],
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev --turbo",
+        "dev": "next dev --turbo --experimental-https",
         "build": "next build",
         "clean": "rimraf -g dist coverage .turbo .next *.tsbuildinfo *.log node_modules",
         "lint": "next lint",
@@ -58,6 +58,7 @@
         "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
         "accept-language-parser": "1.5.0",
+        "clsx": "2.1.1",
         "colord": "2.9.3",
         "convert-units": "2.3.4",
         "geist": "1.3.1",
@@ -79,29 +80,35 @@
         "sass": "1.77.8",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
+        "tailwind-merge": "2.5.2",
         "the-new-css-reset": "1.11.3",
         "use-context-selector": "2.0.0"
     },
     "devDependencies": {
         "@happy-dom/global-registrator": "15.0.0",
         "@nordcom/prettier": "0.1.1",
-        "@testing-library/react": "16.0.0",
+        "@tailwindcss/aspect-ratio": "0.4.2",
+        "@tailwindcss/typography": "0.5.14",
         "@testing-library/jest-dom": "6.5.0",
+        "@testing-library/react": "16.0.0",
         "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
         "@types/lodash.debounce": "4.0.9",
         "@types/nprogress": "0.2.3",
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
+        "autoprefixer": "10.4.20",
         "concurrently": "8.2.2",
         "critters": "0.0.24",
         "eslint-config-next": "14.2.1",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.0.0",
+        "postcss": "8.4.41",
         "prettier": "3.3.3",
         "rimraf": "6.0.1",
         "server-only": "0.0.1",
+        "tailwindcss": "3.4.10",
         "typescript": "5.5.4",
         "vitest": "1.5.0"
     }
