--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -69,15 +69,16 @@
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
         "next-sitemap": "4.2.3",
-        "next": "15.0.0-canary.129",
+        "next": "15.0.0-canary.131",
         "nextjs-toploader": "1.6.12",
         "nprogress": "0.2.0",
-        "react-dom": "19.0.0-rc-b57d2823-20240822",
+        "react-dom": "19.0.0-rc-f65ac7bd-20240826",
         "react-error-boundary": "4.0.13",
         "react-icons": "5.1.0",
         "react-ipgeolocation": "1.4.0",
+        "react-live-chat-loader": "2.9.2",
         "react-share": "5.1.0",
-        "react": "19.0.0-rc-b57d2823-20240822",
+        "react": "19.0.0-rc-f65ac7bd-20240826",
         "resolve-accept-language": "3.1.5",
         "sass": "1.77.8",
         "sharp": "0.33.5",
@@ -89,7 +90,7 @@
     },
     "devDependencies": {
         "@happy-dom/global-registrator": "15.0.0",
-        "@next/bundle-analyzer": "14.2.4",
+        "@next/bundle-analyzer": "15.0.0-canary.131",
         "@nordcom/prettier": "0.1.1",
         "@slicemachine/adapter-next": "0.3.46",
         "@tailwindcss/typography": "0.5.14",
@@ -103,10 +104,10 @@
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
         "autoprefixer": "10.4.20",
-        "babel-plugin-react-compiler": "0.0.0-experimental-f1f288c-20240725",
+        "babel-plugin-react-compiler": "0.0.0-experimental-9e9694c-20240826",
         "concurrently": "8.2.2",
         "critters": "0.0.24",
-        "eslint-config-next": "14.2.1",
+        "eslint-config-next": "15.0.0-canary.131",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.0.0",
