--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,7 @@
         "**/*.tsbuildinfo": true,
         "**/CVS": true,
         "**/junit.xml": true,
-        "**/node_modules": true,
+        //"**/node_modules": true,
         "**/Thumbs.db": true
     },
     "files.autoSave": "off",
