--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,7 +10,7 @@
     ],
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev --experimental-https",
+        "dev": "next dev --turbo --experimental-https",
         "build": "next build",
         "clean": "rimraf -g dist coverage .turbo .next *.tsbuildinfo *.log node_modules",
         "lint": "next lint",
@@ -47,7 +47,7 @@
         "@auth/core": "0.34.2",
         "@apollo/client": "3.11.4",
         "@apollo/experimental-nextjs-app-support": "0.11.2",
-        "@next/third-parties": "14.2.1",
+        "@next/third-parties": "15.0.0-canary.131",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/commerce-marketing-common": "workspace:*",
@@ -58,6 +58,7 @@
         "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
         "accept-language-parser": "1.5.0",
+        "clsx": "2.1.1",
         "colord": "2.9.3",
         "convert-units": "2.3.4",
         "geist": "1.3.1",
@@ -68,24 +69,27 @@
         "next-auth": "5.0.0-beta.20",
         "next-seo": "6.5.0",
         "next-sitemap": "4.2.3",
-        "next": "14.2.1",
+        "next": "15.0.0-canary.131",
         "nextjs-toploader": "1.6.12",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
-        "react-dom": "18.2.0",
+        "react-dom": "19.0.0-rc-f65ac7bd-20240826",
         "react-icons": "5.1.0",
-        "react": "18.2.0",
+        "react": "19.0.0-rc-f65ac7bd-20240826",
         "sass": "1.77.8",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
+        "tailwind-merge": "2.5.2",
         "the-new-css-reset": "1.11.3",
         "use-context-selector": "2.0.0"
     },
     "devDependencies": {
         "@happy-dom/global-registrator": "15.0.0",
         "@nordcom/prettier": "0.1.1",
-        "@testing-library/react": "16.0.0",
+        "@tailwindcss/aspect-ratio": "0.4.2",
+        "@tailwindcss/typography": "0.5.14",
         "@testing-library/jest-dom": "6.5.0",
+        "@testing-library/react": "16.0.0",
         "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
         "@types/lodash.debounce": "4.0.9",
@@ -94,13 +98,14 @@
         "@types/react": "18.2.75",
         "concurrently": "8.2.2",
         "critters": "0.0.24",
-        "eslint-config-next": "14.2.1",
+        "eslint-config-next": "15.0.0-canary.131",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.0.0",
         "prettier": "3.3.3",
         "rimraf": "6.0.1",
         "server-only": "0.0.1",
+        "tailwindcss": "3.4.10",
         "typescript": "5.5.4",
         "vitest": "1.5.0"
     }
