--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -1,35 +1,71 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
-    "compilerOptions": {
-        "baseUrl": ".",
-        "plugins": [{ "name": "next" }],
-        "lib": ["DOM", "DOM.iterable", "ESNext"],
-        "rootDir": "../../",
-        "jsx": "preserve",
-        "jsxImportSource": "react",
-        "paths": {
-            "@/api/*": ["src/api/*"],
-            "@/auth": ["src/utils/auth.ts"],
-            "@/components/*": ["src/components/*"],
-            "@/styles/*": ["src/scss/*"],
-            "@/utils/*": ["src/utils/*"],
-            // Assets.
-            "@/static/*": ["public/*"]
-        },
-        "allowJs": true,
-        "downlevelIteration": true,
-        "esModuleInterop": true,
-        "incremental": true,
-        "isolatedModules": true,
-        "module": "ESNext",
-        "moduleResolution": "Node10",
-        "noEmit": true,
-        "resolveJsonModule": true,
-        "skipLibCheck": true,
-        "strict": true,
-        "typeRoots": ["node_modules/@types", "../../node_modules/@types"]
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "lib": [
+      "DOM",
+      "DOM.iterable",
+      "ESNext"
+    ],
+    "rootDir": "../../",
+    "jsx": "preserve",
+    "jsxImportSource": "react",
+    "paths": {
+      "@/api/*": [
+        "src/api/*"
+      ],
+      "@/auth": [
+        "src/utils/auth.ts"
+      ],
+      "@/components/*": [
+        "src/components/*"
+      ],
+      "@/styles/*": [
+        "src/scss/*"
+      ],
+      "@/utils/*": [
+        "src/utils/*"
+      ],
+      // Assets.
+      "@/static/*": [
+        "public/*"
+      ]
     },
-    "exclude": ["node_modules"],
-    "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts", "next.config.mjs"],
-    "references": [{ "path": "../../tsconfig.json" }]
+    "allowJs": true,
+    "downlevelIteration": true,
+    "esModuleInterop": true,
+    "incremental": true,
+    "isolatedModules": true,
+    "module": "ESNext",
+    "moduleResolution": "Node10",
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "typeRoots": [
+      "node_modules/@types",
+      "../../node_modules/@types"
+    ],
+    "target": "ES2017"
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "next-env.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    ".next/types/**/*.ts",
+    "next.config.mjs"
+  ],
+  "references": [
+    {
+      "path": "../../tsconfig.json"
+    }
+  ]
 }
