--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -48,7 +48,7 @@
         "@apollo/experimental-nextjs-app-support": "0.11.2",
         "@markdoc/markdoc": "0.4.0",
         "@markdoc/next.js": "0.3.7",
-        "@next/third-parties": "14.2.1",
+        "@next/third-parties": "15.0.0-canary.131",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/commerce-marketing-common": "workspace:*",
@@ -70,13 +70,13 @@
         "next-auth": "4.24.7",
         "next-seo": "6.5.0",
         "next-sitemap": "4.2.3",
-        "next": "14.2.1",
+        "next": "15.0.0-canary.131",
         "nextjs-toploader": "1.6.12",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
-        "react-dom": "18.2.0",
+        "react-dom": "19.0.0-rc-f65ac7bd-20240826",
         "react-icons": "5.1.0",
-        "react": "18.2.0",
+        "react": "19.0.0-rc-f65ac7bd-20240826",
         "sass": "1.77.8",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
@@ -100,7 +100,7 @@
         "autoprefixer": "10.4.20",
         "concurrently": "8.2.2",
         "critters": "0.0.24",
-        "eslint-config-next": "14.2.1",
+        "eslint-config-next": "15.0.0-canary.131",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.0.0",
