--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,7 +10,7 @@
     ],
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev --turbo --experimental-https",
+        "dev": "next dev -p 3000",
         "build": "next build",
         "clean": "rimraf -g dist coverage .turbo .next *.tsbuildinfo *.log node_modules",
         "lint": "next lint",
@@ -76,7 +76,6 @@
         "react-dom": "19.0.0-rc-f65ac7bd-20240826",
         "react-icons": "5.1.0",
         "react": "19.0.0-rc-f65ac7bd-20240826",
-        "sass": "1.77.8",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
         "tailwind-merge": "2.5.2",
@@ -103,6 +102,7 @@
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.3.1",
+        "postcss": "8.4.41",
         "prettier": "3.3.3",
         "rimraf": "6.0.1",
         "server-only": "0.0.1",
