Admin: Start work on design.

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -44,9 +44,9 @@
     },
     "homepage": "https://shops.nordcom.io/",
     "dependencies": {
-        "@auth/core": "0.34.2",
         "@apollo/client": "3.11.5",
         "@apollo/experimental-nextjs-app-support": "0.11.2",
+        "@auth/core": "0.34.2",
         "@next/third-parties": "15.0.0-canary.131",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
@@ -58,6 +58,7 @@
         "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
         "accept-language-parser": "1.5.0",
+        "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
         "colord": "2.9.3",
         "convert-units": "2.3.4",
@@ -65,6 +66,7 @@
         "graphql-tag": "2.12.6",
         "gravatar.js": "2.0.0",
         "lodash.debounce": "4.0.8",
+        "lucide-react": "0.436.0",
         "mongoose": "8.3.1",
         "next-auth": "5.0.0-beta.20",
         "next-seo": "6.5.0",
@@ -79,6 +81,7 @@
         "sharp": "0.33.5",
         "sonner": "1.5.0",
         "tailwind-merge": "2.5.2",
+        "tailwindcss-animate": "1.0.7",
         "the-new-css-reset": "1.11.3",
         "use-context-selector": "2.0.0"
     },
@@ -86,8 +89,8 @@
         "@happy-dom/global-registrator": "15.3.1",
         "@nordcom/prettier": "0.1.1",
         "@tailwindcss/aspect-ratio": "0.4.2",
-        "@tailwindcss/typography": "0.5.15",
         "@tailwindcss/forms": "0.5.8",
+        "@tailwindcss/typography": "0.5.15",
         "@testing-library/jest-dom": "6.5.0",
         "@testing-library/react": "16.0.1",
         "@types/accept-language-parser": "1.5.6",
