Admin: Initial work on Admin Dashboard UI.

--- a/apps/admin/.eslintrc
+++ b/apps/admin/.eslintrc
@@ -9,6 +9,10 @@
                 "ecmaFeatures": {
                     "jsx": true
                 }
+            },
+            "rules": {
+                "react/prop-types": "off",
+                "jsx-a11y/heading-has-content": "off"
             }
         }
     ],
