--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -52,6 +52,10 @@
         "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/commerce-marketing-common": "workspace:*",
         "@nordcom/nordstar": "0.0.60",
+        "@radix-ui/react-avatar": "1.1.0",
+        "@radix-ui/react-scroll-area": "1.1.0",
+        "@radix-ui/react-separator": "1.1.0",
+        "@radix-ui/react-slot": "1.1.0",
         "@shopify/hydrogen-react": "2024.7.2",
         "@shopify/shopify-api": "11.3.0",
         "@vercel/analytics": "1.3.1",
@@ -68,16 +72,16 @@
         "lodash.debounce": "4.0.8",
         "lucide-react": "0.436.0",
         "mongoose": "8.3.1",
+        "next": "15.0.0-canary.131",
         "next-auth": "5.0.0-beta.20",
         "next-seo": "6.5.0",
         "next-sitemap": "4.2.3",
-        "next": "15.0.0-canary.131",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
+        "react": "19.0.0-rc-f65ac7bd-20240826",
         "react-dom": "19.0.0-rc-f65ac7bd-20240826",
         "react-icons": "5.1.0",
-        "react": "19.0.0-rc-f65ac7bd-20240826",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
         "tailwind-merge": "2.5.2",
@@ -97,12 +101,12 @@
         "@types/convert-units": "2.3.9",
         "@types/lodash.debounce": "4.0.9",
         "@types/nprogress": "0.2.3",
-        "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
+        "@types/react-dom": "18.2.24",
         "concurrently": "8.2.2",
         "critters": "0.0.24",
-        "eslint-config-next": "15.0.0-canary.131",
         "eslint": "8.57.0",
+        "eslint-config-next": "15.0.0-canary.131",
         "graphql": "16.9.0",
         "happy-dom": "15.3.1",
         "postcss": "8.4.41",
