Storefront: Prepare for `judge.me`.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
         "Götaland",
         "HSTS",
         "ipgeolocation",
+        "Judgeme",
         "lastmod",
         "Lexend",
         "markdoc",
