--- a/package.json
+++ b/package.json
@@ -68,15 +68,16 @@
         "babel-plugin-module-resolver": "5.0.2",
         "concurrently": "8.2.2",
         "dotenv-cli": "7.4.2",
-        "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-jsdoc": "50.2.2",
         "eslint-plugin-jsx-a11y": "6.9.0",
         "eslint-plugin-prettier": "5.2.1",
-        "eslint-plugin-react": "7.35.0",
+        "eslint-plugin-react-compiler": "0.0.0-experimental-b8a7b48-20240830",
         "eslint-plugin-react-hooks": "4.6.0",
+        "eslint-plugin-react": "7.35.0",
         "eslint-plugin-simple-import-sort": "12.1.0",
         "eslint-plugin-unused-imports": "4.0.0",
+        "eslint": "8.57.0",
         "glob": "11.0.0",
         "mongoose": "8.4.0",
         "prettier": "3.3.3",
