--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -10,7 +10,7 @@
     ],
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev -p 1337 --turbo --experimental-https",
+        "dev": "next dev -p 1337 --turbo",
         "build": "next build",
         "clean": "rimraf -g dist coverage .turbo .next .tsbuildinfo *.log",
         "lint": "next lint",
@@ -46,6 +46,7 @@
     "dependencies": {
         "@apollo/client": "3.11.6",
         "@apollo/experimental-nextjs-app-support": "0.11.3",
+        "@neshca/cache-handler": "1.6.1",
         "@next/third-parties": "14.2.1",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
@@ -79,6 +80,7 @@
         "react-live-chat-loader": "2.9.2",
         "react-share": "5.1.0",
         "react": "19.0.0-rc-4f604941-20240830",
+        "redis": "4.7.0",
         "resolve-accept-language": "3.1.6",
         "sass": "1.78.0",
         "sharp": "0.33.5",
