--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
         "lint": "turbo run lint",
         "prettier": "prettier **/src/**/*.{ts,tsx,scss} --check",
         "format": "concurrently pnpm:format:* && turbo run format && turbo run fix:lint",
-        "format:eslint": "eslint --fix **/src/**/*.{ts,tsx}",
-        "format:prettier": "prettier --write **/src/**/*.{ts,tsx,scss,json}",
+        "format:eslint": "eslint --fix **/src/**/*.{ts,tsx,mjs}",
+        "format:prettier": "prettier --write **/src/**/*.{ts,tsx,mjs,scss,json}",
         "typecheck": "turbo run typecheck",
         "test": "dotenv -c -- vitest run --coverage",
         "slicemachine": "turbo run slicemachine --env-mode=loose"
