Meta: Upgrade `react`, `react-dom` and `next` deps.

--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -47,7 +47,7 @@
         "@apollo/client": "3.11.7",
         "@apollo/experimental-nextjs-app-support": "0.11.3",
         "@neshca/cache-handler": "1.6.1",
-        "@next/third-parties": "14.2.1",
+        "@next/third-parties": "canary",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/nordstar": "0.0.60",
@@ -70,16 +70,16 @@
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
         "next-sitemap": "4.2.3",
-        "next": "15.0.0-canary.146",
+        "next": "canary",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
-        "react-dom": "19.0.0-rc-4f604941-20240830",
+        "react-dom": "rc",
         "react-error-boundary": "4.0.13",
         "react-icons": "5.1.0",
         "react-ipgeolocation": "1.4.0",
         "react-live-chat-loader": "2.9.2",
         "react-share": "5.1.0",
-        "react": "19.0.0-rc-4f604941-20240830",
+        "react": "rc",
         "redis": "4.7.0",
         "resolve-accept-language": "3.1.6",
         "sass": "1.78.0",
@@ -104,10 +104,10 @@
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
         "autoprefixer": "10.4.20",
-        "babel-plugin-react-compiler": "0.0.0-experimental-4e0eccf-20240830",
+        "babel-plugin-react-compiler": "latest",
         "concurrently": "9.0.0",
         "critters": "0.0.24",
-        "eslint-config-next": "15.0.0-canary.146",
+        "eslint-config-next": "canary",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.7.3",
