--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -47,7 +47,7 @@
         "@apollo/client": "3.11.7",
         "@apollo/experimental-nextjs-app-support": "0.11.3",
         "@auth/core": "0.34.2",
-        "@next/third-parties": "15.0.0-canary.131",
+        "@next/third-parties": "canary",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/commerce-marketing-common": "workspace:*",
@@ -72,16 +72,16 @@
         "lodash.debounce": "4.0.8",
         "lucide-react": "0.439.0",
         "mongoose": "8.3.1",
-        "next": "15.0.0-canary.131",
         "next-auth": "5.0.0-beta.20",
         "next-seo": "6.6.0",
         "next-sitemap": "4.2.3",
+        "next": "canary",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
-        "react": "19.0.0-rc-f65ac7bd-20240826",
-        "react-dom": "19.0.0-rc-f65ac7bd-20240826",
+        "react-dom": "rc",
         "react-icons": "5.1.0",
+        "react": "rc",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
         "tailwind-merge": "2.5.2",
@@ -100,12 +100,12 @@
         "@types/convert-units": "2.3.9",
         "@types/lodash.debounce": "4.0.9",
         "@types/nprogress": "0.2.3",
-        "@types/react": "18.2.75",
         "@types/react-dom": "18.2.24",
+        "@types/react": "18.2.75",
         "concurrently": "9.0.0",
         "critters": "0.0.24",
+        "eslint-config-next": "canary",
         "eslint": "8.57.0",
-        "eslint-config-next": "15.0.0-canary.131",
         "graphql": "16.9.0",
         "happy-dom": "15.7.3",
         "postcss": "8.4.45",
