--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -10,7 +10,7 @@
     ],
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev -p 3001 --turbo --experimental-https",
+        "dev": "next dev -p 3001 --turbo",
         "build": "next build",
         "clean": "rimraf -g dist coverage .turbo .next *.tsbuildinfo *.log node_modules",
         "lint": "next lint",
