Storefront: Start preparing for `builder.io` support.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
         "Dahlqvist",
         "datasource",
         "Deca",
+        "dotenvx",
         "ecommerce",
         "Etags",
         "Filiph",
