--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -67,6 +67,7 @@
         "colord": "2.9.3",
         "convert-units": "2.3.4",
         "country-code-lookup": "0.1.3",
+        "ioredis": "5.4.1",
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
         "next-sitemap": "4.2.3",
@@ -80,7 +81,6 @@
         "react-live-chat-loader": "2.9.2",
         "react-share": "5.1.0",
         "react": "19.0.0-rc-3dfd5d9e-20240910",
-        "redis": "4.7.0",
         "resolve-accept-language": "3.1.6",
         "sass": "1.78.0",
         "sharp": "0.33.5",
