Storefront: Revert locale changes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,7 @@
         "Judgeme",
         "lastmod",
         "Lexend",
+        "Lightningcss",
         "markdoc",
         "Mellerud",
         "metafield",
