--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -46,6 +46,7 @@
     "dependencies": {
         "@apollo/client": "3.11.8",
         "@apollo/experimental-nextjs-app-support": "0.11.3",
+        "@auth/core": "0.34.2",
         "@neshca/cache-handler": "1.7.0",
         "@next/third-parties": "14.2.9",
         "@nordcom/commerce-db": "workspace:*",
@@ -70,6 +71,7 @@
         "ioredis": "5.4.1",
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
+        "next-auth": "5.0.0-beta.20",
         "next-sitemap": "4.2.3",
         "next": "15.0.0-canary.149",
         "nextjs-toploader": "3.6.15",
