Storefront: Improve analytics reporting.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,9 @@
         "HSTS",
         "ipgeolocation",
         "Judgeme",
+        "klaviyo",
         "lastmod",
+        "learnq",
         "Lexend",
         "Lightningcss",
         "markdoc",
