Storefront: Further streamline error handling.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "changefreq",
         "colord",
         "compat",
+        "Componentizable",
         "Dahlqvist",
         "datasource",
         "Deca",
