Storefront: Improve ecommerce tracking slightly.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
         "datasource",
         "Deca",
         "dotenvx",
+        "ecomm",
         "ecommerce",
         "Etags",
         "Filiph",
