--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -100,12 +100,14 @@
         "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
         "@types/lodash.debounce": "4.0.9",
+        "@types/node": "20.12.7",
         "@types/nprogress": "0.2.3",
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
         "babel-plugin-react-compiler": "0.0.0-experimental-2bc6fec-20240910",
         "concurrently": "9.0.1",
         "critters": "0.0.24",
+        "dotenv": "16.4.5",
         "eslint-config-next": "15.0.0-canary.150",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
