Storefront: Improve `Suspense` usage.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
         "Götaland",
         "HSTS",
         "ipgeolocation",
+        "jsonld",
         "Judgeme",
         "klaviyo",
         "lastmod",
@@ -97,6 +98,7 @@
         "nprogress",
         "nums",
         "overscroll",
+        "pagetype",
         "predev",
         "Preloadable",
         "prismic",
