Storefront: Slightly improve cache before refactor.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,6 +90,7 @@
         "metafield",
         "metafields",
         "myshopify",
+        "neshca",
         "nextauth",
         "nextjs",
         "Nordcom",
