--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -48,33 +48,30 @@
         "@apollo/experimental-nextjs-app-support": "0.11.3",
         "@markdoc/markdoc": "0.4.0",
         "@markdoc/next.js": "0.3.7",
-        "@next/third-parties": "14.2.9",
+        "@next/third-parties": "15.0.0-canary.160",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/commerce-marketing-common": "workspace:*",
         "@nordcom/nordstar": "0.0.60",
+        "@opentelemetry/api-logs": "0.53.0",
+        "@opentelemetry/instrumentation": "0.53.0",
+        "@opentelemetry/sdk-logs": "0.53.0",
         "@shopify/hydrogen-react": "2024.7.4",
         "@vercel/analytics": "1.3.1",
         "@vercel/otel": "1.10.0",
         "@vercel/speed-insights": "1.0.12",
         "@vercel/toolbar": "0.1.20",
-        "accept-language-parser": "1.5.0",
         "clsx": "2.1.1",
-        "colord": "2.9.3",
-        "convert-units": "2.3.4",
         "geist": "1.3.1",
         "glob": "11.0.0",
-        "graphql-tag": "2.12.6",
         "gravatar.js": "2.0.0",
         "gray-matter": "4.0.3",
-        "lodash.debounce": "4.0.8",
         "next-auth": "4.24.7",
         "next-seo": "6.6.0",
         "next-sitemap": "4.2.3",
-        "next": "15.0.0-canary.159",
+        "next": "15.0.0-canary.160",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
-        "png-to-ico": "2.1.8",
         "react-dom": "0.0.0-experimental-e740d4b1-20240919",
         "react-icons": "5.3.0",
         "react": "0.0.0-experimental-e740d4b1-20240919",
@@ -92,19 +89,17 @@
         "@tailwindcss/typography": "0.5.15",
         "@testing-library/jest-dom": "6.5.0",
         "@testing-library/react": "16.0.1",
-        "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
-        "@types/lodash.debounce": "4.0.9",
         "@types/node": "20.12.7",
         "@types/nprogress": "0.2.3",
-        "@types/react-dom": "18.2.24",
-        "@types/react": "18.2.75",
+        "@types/react-dom": "18.3.0",
+        "@types/react": "18.3.8",
         "autoprefixer": "10.4.20",
         "babel-plugin-react-compiler": "0.0.0-experimental-24ec0eb-20240918",
         "concurrently": "9.0.1",
         "critters": "0.0.24",
         "dotenv": "16.4.5",
-        "eslint-config-next": "15.0.0-canary.159",
+        "eslint-config-next": "15.0.0-canary.160",
         "eslint": "8.57.1",
         "graphql": "16.9.0",
         "happy-dom": "15.7.4",
