Meta: Update extensions.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -11,6 +11,6 @@
         "wakatime.vscode-wakatime",
         "esbenp.prettier-vscode",
         "bradlc.vscode-tailwindcss",
-        "codecov.codecov"
+        "vitest.explorer"
     ]
 }
