Storefront: Improve prismic image size.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,7 @@
         "filiphsps",
         "googlebot",
         "Götaland",
+        "hrefs",
         "HSTS",
         "ipgeolocation",
         "jsonld",
