Admin/DB: Add `reviews` stub.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,7 @@
         "learnq",
         "Lexend",
         "Lightningcss",
+        "lucide",
         "markdoc",
         "Mellerud",
         "metafield",
