--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,7 +4,12 @@
         "composite": true,
         "module": "ESNext",
         "moduleResolution": "Bundler",
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "strict": true,
+        "strictBindCallApply": true,
+        "strictFunctionTypes": true,
+        "strictNullChecks": true,
+        "strictPropertyInitialization": true
     },
     "exclude": ["node_modules"],
     "include": ["./vite.config.ts", "packages/**/vite.config.ts"]
